fix: overflow dei messaggi troppo lunghi

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,8 @@ li {
 
 
 .message {
-    
+    max-width: 60%;
+    word-wrap: break-word;
     padding: 0.5em 0.5em;
     margin: 10px;
     border-radius: 12px;
